:bug: Fix vertical resizing (resize- & toggle button overlap)

--- a/src/modules/bpmn-io/bpmn-io.scss
+++ b/src/modules/bpmn-io/bpmn-io.scss
@@ -44,15 +44,27 @@
 }
 
 .toggle_panel {
-  right: 337px;
-  position: absolute;
-  bottom: 44%;
+  position: relative;
   transform: rotate(-90deg);
+  bottom: 0;
 }
 
 .resize_btn {
-  right: 331px;
-  position: absolute;
-  top: 44%;
+  position: relative;
   transform: rotate(-90deg);
+  bottom: 0;
+}
+
+.resize_div {
+  right: 331px;  
+  height: 50%;
+  bottom: 80px;
+  position: absolute;
+}
+
+.toggle_div {
+  right: 337px;
+  height: 50%;
+  bottom: 0;
+  position: absolute;
 }
